# Bifithon

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  QUICKSTART.md  README.md  bif_libraries.json  bifithon_launcher.sh  install.ps1  install.sh  main.cpp
bifithon/compiler/: bifithon_compiler.py
bifithon/examples/: example1_math  example1_math.bif  example1_math.cpp  example2_loops  example2_loops.bif  example2_loops.cpp  example3_functions  example3_functions.bif  example3_functions.cpp  example4_biftools  example4_biftools.bif  example5_calculator.bif
bifithon/ide/: bifithon_ide.py
bifithon/libraries/: bifMath.h  bifinter.h  biftools.h
examples/: 2.bif  division.bif  if_else.bif  input_echo.bif  tkinter_demo.bif  while_loop.bif
ide/: CMakeLists.txt  bifide.cpp  bifide.py
libs/BIFMath/: BIFMath.cpp  BIFMath.h
libs/BIFitertools/: BIFitertools.cpp  BIFitertools.h
libs/BIFtkinter/: BIFtkinter.cpp  BIFtkinter.h
tools/: bifc.cpp  bifc.py
